--- a/calendar.html
+++ b/calendar.html
@@ -201,7 +201,7 @@
                               type="button"
                               class="btn-nav"
                             >
-                              <span class="_3hmsj"
+                              <span class="box-border"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -228,7 +228,7 @@
                               type="button"
                               class="btn-nav"
                             >
-                              <span class="_3hmsj"
+                              <span class="box-border"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -257,7 +257,7 @@
                             type="button"
                             class="btn-nav"
                           >
-                            <span class="_3hmsj"
+                            <span class="box-border"
                               ><svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -364,7 +364,7 @@
                               type="button"
                               class="btn-nav"
                             >
-                              <span class="_3hmsj"
+                              <span class="box-border"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -389,7 +389,7 @@
                                 type="button"
                                 class="btn-nav"
                               >
-                                <span class="_3hmsj"
+                                <span class="box-border"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -419,7 +419,7 @@
                                 type="button"
                                 class="btn-nav"
                               >
-                                <span class="_3hmsj"
+                                <span class="box-border"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -624,7 +624,7 @@
                                   <div>
                                     <button type="button" class="_1ju7xj0j">
                                       <span class="_14d5b3i"
-                                        ><span class="_3hmsj">Actions</span
+                                        ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
                                           ><svg
                                             viewBox="0 0 32 32"
