--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -204,7 +204,7 @@
                               type="button"
                               class="btn-nav"
                             >
-                              <span class="_3hmsj"
+                              <span class="box-border"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -231,7 +231,7 @@
                               type="button"
                               class="btn-nav"
                             >
-                              <span class="_3hmsj"
+                              <span class="box-border"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -260,7 +260,7 @@
                             type="button"
                             class="btn-nav"
                           >
-                            <span class="_3hmsj"
+                            <span class="box-border"
                               ><svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -367,7 +367,7 @@
                               type="button"
                               class="btn-nav"
                             >
-                              <span class="_3hmsj"
+                              <span class="box-border"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -392,7 +392,7 @@
                                 type="button"
                                 class="btn-nav"
                               >
-                                <span class="_3hmsj"
+                                <span class="box-border"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -422,7 +422,7 @@
                                 type="button"
                                 class="btn-nav"
                               >
-                                <span class="_3hmsj"
+                                <span class="box-border"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -627,7 +627,7 @@
                                   <div>
                                     <button type="button" class="_1ju7xj0j">
                                       <span class="_14d5b3i"
-                                        ><span class="_3hmsj">Actions</span
+                                        ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
                                           ><svg
                                             viewBox="0 0 32 32"
@@ -4235,7 +4235,7 @@
                                 ><div class="_zhftk97">
                                   <div class="_11hx67x">Time</div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <select
                                     name="starts_at"
                                     class="_1iwku6d"
@@ -4484,7 +4484,7 @@
                                 ><div class="_zhftk97">
                                   <div class="_11hx67x">Booking type</div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <select
                                     name="booking_type"
                                     class="_1iwku6d"
@@ -4723,7 +4723,7 @@
                                     Cutoff time for additional guests
                                   </div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <select
                                     name="last_booking_lead_minutes"
                                     class="_1iwku6d"
@@ -4828,7 +4828,7 @@
                                     Cutoff time for your first guest
                                   </div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <select
                                     name="first_booking_lead_minutes"
                                     class="_1iwku6d"
@@ -4923,7 +4923,7 @@
                                 ><div class="_zhftk97">
                                   <div class="_11hx67x">Repeat scheduling</div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <select
                                     name="frequency"
                                     class="_1iwku6d"
