--- a/calendar_week.html
+++ b/calendar_week.html
@@ -202,7 +202,7 @@
                               type="button"
                               class="btn-nav"
                             >
-                              <span class="_3hmsj"
+                              <span class="box-border"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -229,7 +229,7 @@
                               type="button"
                               class="btn-nav"
                             >
-                              <span class="_3hmsj"
+                              <span class="box-border"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -258,7 +258,7 @@
                             type="button"
                             class="btn-nav"
                           >
-                            <span class="_3hmsj"
+                            <span class="box-border"
                               ><svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -365,7 +365,7 @@
                               type="button"
                               class="btn-nav"
                             >
-                              <span class="_3hmsj"
+                              <span class="box-border"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -390,7 +390,7 @@
                                 type="button"
                                 class="btn-nav"
                               >
-                                <span class="_3hmsj"
+                                <span class="box-border"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -420,7 +420,7 @@
                                 type="button"
                                 class="btn-nav"
                               >
-                                <span class="_3hmsj"
+                                <span class="box-border"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -625,7 +625,7 @@
                                   <div>
                                     <button type="button" class="_1ju7xj0j">
                                       <span class="_14d5b3i"
-                                        ><span class="_3hmsj">Actions</span
+                                        ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
                                           ><svg
                                             viewBox="0 0 32 32"
