--- a/covidsafety.html
+++ b/covidsafety.html
@@ -48,7 +48,7 @@
               >
                 <div class="_f9pquu" role="navigation">
                   <a aria-label="Airbnb Homepage" href="/" class="_dernx5"
-                    ><span class="_3hmsj"
+                    ><span class="box-border"
                       ><svg
                         viewBox="0 0 1000 1000"
                         role="img"
@@ -1447,7 +1447,7 @@
                                               type="button"
                                               class="_dernx5"
                                             >
-                                              <span class="_3hmsj"
+                                              <span class="box-border"
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
@@ -1552,7 +1552,7 @@
                                               type="button"
                                               class="_dernx5"
                                             >
-                                              <span class="_3hmsj"
+                                              <span class="box-border"
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
@@ -1661,7 +1661,7 @@
                                               type="button"
                                               class="_dernx5"
                                             >
-                                              <span class="_3hmsj"
+                                              <span class="box-border"
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
@@ -1769,7 +1769,7 @@
                                               type="button"
                                               class="_dernx5"
                                             >
-                                              <span class="_3hmsj"
+                                              <span class="box-border"
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
