--- a/dashboard.html
+++ b/dashboard.html
@@ -2546,7 +2546,7 @@
                                 </div></a
                               >
                               <div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_d1ib85">
                                     <div>
                                       <div>
@@ -2638,7 +2638,7 @@
                                 </div></a
                               >
                               <div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_d1ib85">
                                     <div>
                                       <div>
@@ -2728,7 +2728,7 @@
                                 </div></a
                               >
                               <div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_d1ib85">
                                     <div>
                                       <div>
@@ -3032,7 +3032,7 @@
                               type="button"
                               class="btn-nav"
                             >
-                              <span class="_3hmsj"
+                              <span class="box-border"
                                 ><svg
                                   viewBox="0 0 16 16"
                                   role="presentation"
@@ -3055,7 +3055,7 @@
                             type="button"
                             class="btn-nav"
                           >
-                            <span class="_3hmsj"
+                            <span class="box-border"
                               ><svg
                                 viewBox="0 0 16 16"
                                 role="presentation"
