--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -92,7 +92,7 @@
                         <div class="_e296pg">
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="Experience page-section-row"
                             >
                               <div
@@ -325,7 +325,7 @@
                           type="button"
                           class="_m1y9te"
                         >
-                          <span class="_3hmsj"
+                          <span class="box-border"
                             ><svg
                               viewBox="0 0 16 16"
                               role="img"
