--- a/edit/photos.html
+++ b/edit/photos.html
@@ -92,7 +92,7 @@
                         <div class="_e296pg">
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="Experience page-section-row"
                             >
                               <div
@@ -326,7 +326,7 @@
                           type="button"
                           class="_m1y9te"
                         >
-                          <span class="_3hmsj"
+                          <span class="box-border"
                             ><svg
                               viewBox="0 0 16 16"
                               role="img"
@@ -549,7 +549,7 @@
                                                               class="btn-nav"
                                                             >
                                                               <span
-                                                                class="_3hmsj"
+                                                                class="box-border"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -743,7 +743,7 @@
                                                               class="btn-nav"
                                                             >
                                                               <span
-                                                                class="_3hmsj"
+                                                                class="box-border"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -874,7 +874,7 @@
                                                               class="btn-nav"
                                                             >
                                                               <span
-                                                                class="_3hmsj"
+                                                                class="box-border"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -1005,7 +1005,7 @@
                                                               class="btn-nav"
                                                             >
                                                               <span
-                                                                class="_3hmsj"
+                                                                class="box-border"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -1136,7 +1136,7 @@
                                                               class="btn-nav"
                                                             >
                                                               <span
-                                                                class="_3hmsj"
+                                                                class="box-border"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -1267,7 +1267,7 @@
                                                               class="btn-nav"
                                                             >
                                                               <span
-                                                                class="_3hmsj"
+                                                                class="box-border"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -1398,7 +1398,7 @@
                                                               class="btn-nav"
                                                             >
                                                               <span
-                                                                class="_3hmsj"
+                                                                class="box-border"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -1529,7 +1529,7 @@
                                                               class="btn-nav"
                                                             >
                                                               <span
-                                                                class="_3hmsj"
+                                                                class="box-border"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -1660,7 +1660,7 @@
                                                               class="btn-nav"
                                                             >
                                                               <span
-                                                                class="_3hmsj"
+                                                                class="box-border"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
