--- a/edit/what.html
+++ b/edit/what.html
@@ -87,7 +87,7 @@
                         <div class="_e296pg">
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="Experience page-section-row"
                             >
                               <div
@@ -326,7 +326,7 @@
                           type="button"
                           class="_m1y9te"
                         >
-                          <span class="_3hmsj"
+                          <span class="box-border"
                             ><svg
                               viewBox="0 0 16 16"
                               role="img"
@@ -493,7 +493,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                     Duration
                                                   </div>
                                                 </div>
-                                                <div class="_3hmsj">
+                                                <div class="box-border">
                                                   <select
                                                     data-testid="DURATION"
                                                     name="DURATION"
