--- a/explore-when.html
+++ b/explore-when.html
@@ -56,7 +56,7 @@
                                       type="button"
                                       class="_1wn6bem"
                                     >
-                                      <span class="_3hmsj"
+                                      <span class="box-border"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -3522,7 +3522,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -3552,7 +3552,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -3596,7 +3596,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -3626,7 +3626,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -3670,7 +3670,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -3700,7 +3700,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -3744,7 +3744,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -3774,7 +3774,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -3818,7 +3818,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -3848,7 +3848,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -3892,7 +3892,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -3922,7 +3922,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -3966,7 +3966,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -3996,7 +3996,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -4040,7 +4040,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -4070,7 +4070,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -4114,7 +4114,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -4144,7 +4144,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -4188,7 +4188,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -4218,7 +4218,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -4262,7 +4262,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -4292,7 +4292,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
@@ -4336,7 +4336,7 @@
                                                                               alt=""
                                                                             />
                                                                             <div
-                                                                              class="_3hmsj"
+                                                                              class="box-border"
                                                                             >
                                                                               <div
                                                                                 class="_146q3mx"
@@ -4366,7 +4366,7 @@
                                                                                 alt=""
                                                                               />
                                                                               <div
-                                                                                class="_3hmsj"
+                                                                                class="box-border"
                                                                               >
                                                                                 <div
                                                                                   class="_146q3mx"
