--- a/explore-who.html
+++ b/explore-who.html
@@ -56,7 +56,7 @@
                                       type="button"
                                       class="_1wn6bem"
                                     >
-                                      <span class="_3hmsj"
+                                      <span class="box-border"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
