--- a/insights.html
+++ b/insights.html
@@ -1402,7 +1402,7 @@
                                       ><span class="a8jt5op dir dir-ltr"
                                         >Review range</span
                                       >
-                                      <div class="_3hmsj">
+                                      <div class="box-border">
                                         <select
                                           class="_pabip3"
                                           id="EXPERIENCES_HOST_INSIGHTS_HEADING_SELECT-select"
