--- a/payment.html
+++ b/payment.html
@@ -996,7 +996,7 @@
                                                       ><span
                                                         class="c4wd1yj dir dir-ltr"
                                                         ><span class="_14d5b3i"
-                                                          ><span class="_3hmsj"
+                                                          ><span class="box-border"
                                                             >Confirm and
                                                             pay</span
                                                           ></span
