--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -518,7 +518,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_167wsvl">
                                     <button
                                       type="button"
@@ -527,7 +527,7 @@
                                       aria-label="Main navigation menu. 2 notifications."
                                       data-testid="cypress-headernav-profile"
                                     >
-                                      <div class="_3hmsj">
+                                      <div class="box-border">
                                         <svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
