--- a/personal-info.html
+++ b/personal-info.html
@@ -537,7 +537,7 @@
                                             ><div class="_1wud6lj">
                                               <div class="_11hx67x">Gender</div>
                                             </div>
-                                            <div class="_3hmsj">
+                                            <div class="box-border">
                                               <select
                                                 name="gender"
                                                 placeholder="Select"
@@ -1109,7 +1109,7 @@
                                                           Country/region
                                                         </div>
                                                       </div>
-                                                      <div class="_3hmsj">
+                                                      <div class="box-border">
                                                         <select
                                                           name="country_code"
                                                           class="_1iwku6d"
@@ -2340,7 +2340,7 @@
                                                   Preferred language
                                                 </div>
                                               </div>
-                                              <div class="_3hmsj">
+                                              <div class="box-border">
                                                 <select
                                                   name="preferred_language"
                                                   placeholder="Select"
@@ -2601,7 +2601,7 @@
                                                       Country code
                                                     </div>
                                                   </div>
-                                                  <div class="_3hmsj">
+                                                  <div class="box-border">
                                                     <select
                                                       name="phone_country"
                                                       placeholder="Choose..."
@@ -3551,7 +3551,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_167wsvl">
                                     <button
                                       type="button"
@@ -3560,7 +3560,7 @@
                                       aria-label="Main navigation menu. 2 notifications."
                                       data-testid="cypress-headernav-profile"
                                     >
-                                      <div class="_3hmsj">
+                                      <div class="box-border">
                                         <svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -3946,7 +3946,7 @@
                                                     Gender
                                                   </div>
                                                 </div>
-                                                <div class="_3hmsj">
+                                                <div class="box-border">
                                                   <select
                                                     name="gender"
                                                     placeholder="Select"
@@ -4540,7 +4540,7 @@
                                                               Country/region
                                                             </div>
                                                           </div>
-                                                          <div class="_3hmsj">
+                                                          <div class="box-border">
                                                             <select
                                                               name="country_code"
                                                               class="_1iwku6d"
@@ -6320,7 +6320,7 @@
                                                       Preferred language
                                                     </div>
                                                   </div>
-                                                  <div class="_3hmsj">
+                                                  <div class="box-border">
                                                     <select
                                                       name="preferred_language"
                                                       placeholder="Select"
@@ -6583,7 +6583,7 @@
                                                           Country code
                                                         </div>
                                                       </div>
-                                                      <div class="_3hmsj">
+                                                      <div class="box-border">
                                                         <select
                                                           name="phone_country"
                                                           placeholder="Choose..."
