--- a/products.html
+++ b/products.html
@@ -203,7 +203,7 @@
                 </nav>
                 <div tabindex="-1" class="_1i7ccu91 d-md-none">
                   <div class="_1a5fl1v">
-                    <div class="_3hmsj">
+                    <div class="box-border">
                       <div
                         style="
                           display: contents;
@@ -7697,7 +7697,7 @@
                   </div>
                 </div>
                 <div class="_1a5fl1v d-none d-lg-block">
-                  <div class="_3hmsj">
+                  <div class="box-border">
                     <div
                       style="
                         display: contents;
@@ -8398,7 +8398,7 @@
                                             </button>
                                           </div>
                                         </div>
-                                        <div class="_3hmsj">
+                                        <div class="box-border">
                                           <div class="_167wsvl">
                                             <button
                                               type="button"
@@ -8407,7 +8407,7 @@
                                               aria-label="Main navigation menu. 1 notification."
                                               data-testid="cypress-headernav-profile"
                                             >
-                                              <div class="_3hmsj">
+                                              <div class="box-border">
                                                 <svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -10019,7 +10019,7 @@
                                                         type="button"
                                                         class="btn-nav"
                                                       >
-                                                        <span class="_3hmsj"
+                                                        <span class="box-border"
                                                           ><svg
                                                             viewBox="0 0 32 32"
                                                             xmlns="http://www.w3.org/2000/svg"
