--- a/resolutions.html
+++ b/resolutions.html
@@ -239,7 +239,7 @@
                                     d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"
                                   ></path>
                                 </g></svg></span></span
-                          ><span class="_3hmsj">Back</span></span
+                          ><span class="box-border">Back</span></span
                         ></button
                       ><span class="_1wxgpj5"
                         ><button
