--- a/reviews.html
+++ b/reviews.html
@@ -1364,7 +1364,7 @@
                                 <div>
                                   <button type="submit" class="btn-dark">
                                     <span class="_14d5b3i"
-                                      ><span class="_3hmsj">Next</span
+                                      ><span class="box-border">Next</span
                                       ><span class="_9y3psr"
                                         ><svg
                                           viewBox="0 0 32 32"
