--- a/signup_login.html
+++ b/signup_login.html
@@ -241,7 +241,7 @@
                                                     Country/Region
                                                   </div>
                                                 </div>
-                                                <div class="_3hmsj">
+                                                <div class="box-border">
                                                   <select
                                                     data-testid="login-signup-countrycode"
                                                     class="_1iwku6d"
@@ -3154,7 +3154,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_167wsvl">
                                     <button
                                       type="button"
@@ -3163,7 +3163,7 @@
                                       aria-label="Main navigation menu"
                                       data-testid="cypress-headernav-profile"
                                     >
-                                      <div class="_3hmsj">
+                                      <div class="box-border">
                                         <svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -3295,7 +3295,7 @@
                                                   Country/Region
                                                 </div>
                                               </div>
-                                              <div class="_3hmsj">
+                                              <div class="box-border">
                                                 <select
                                                   data-testid="login-signup-countrycode"
                                                   class="_1iwku6d"
@@ -6706,7 +6706,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_167wsvl">
                                     <button
                                       type="button"
@@ -6715,7 +6715,7 @@
                                       aria-label="Main navigation menu"
                                       data-testid="cypress-headernav-profile"
                                     >
-                                      <div class="_3hmsj">
+                                      <div class="box-border">
                                         <svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
