--- a/transaction_history.html
+++ b/transaction_history.html
@@ -343,7 +343,7 @@
                                           class="_4y1pzv"
                                           aria-label="Profile"
                                         >
-                                          <div class="_3hmsj">
+                                          <div class="box-border">
                                             <div class="_167wsvl">
                                               <button
                                                 type="button"
