--- a/account-notifications.html
+++ b/account-notifications.html
@@ -995,7 +995,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_167wsvl">
                                     <button
                                       type="button"
@@ -1004,7 +1004,7 @@
                                       aria-label="Main navigation menu. 2 notifications."
                                       data-testid="cypress-headernav-profile"
                                     >
-                                      <div class="_3hmsj">
+                                      <div class="box-border">
                                         <svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1704,7 +1704,7 @@
                                                 Choose a phone number
                                               </div>
                                             </div>
-                                            <div class="_3hmsj">
+                                            <div class="box-border">
                                               <select
                                                 class="_1iwku6d"
                                                 id="notification-settings-active-phone-chooser"
