--- a/account-settings.html
+++ b/account-settings.html
@@ -219,7 +219,7 @@
                               <div class="_e296pg">
                                 <div class="_1j3tda">
                                   <div class="c3dtyuj dir dir-ltr">
-                                    <div class="_3hmsj">
+                                    <div class="box-border">
                                       <div class="_18dgbyf">
                                         <img
                                           class="_r6giuw"
@@ -1067,7 +1067,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_167wsvl">
                                     <button
                                       type="button"
@@ -1076,7 +1076,7 @@
                                       aria-label="Main navigation menu. 2 notifications."
                                       data-testid="cypress-headernav-profile"
                                     >
-                                      <div class="_3hmsj">
+                                      <div class="box-border">
                                         <svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
