--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -419,7 +419,7 @@
                                                 <path
                                                   d="m17.2869988 6.88316725.1272148.11683275 9.2928932 9.2928932-1.4142136 1.4142136-8.293-8.29289324.0001068 20.58578644h-2l-.0001068-20.58578644-8.29278642 8.29289324-1.41421356-1.4142136 9.29289318-9.2928932c.7399408-.73994076 1.915425-.77888501 2.7012124-.11683275zm10.7130012-4.88316725v2h-24v-2z"
                                                 ></path></svg></span
-                                            ><span class="_3hmsj"
+                                            ><span class="box-border"
                                               >Upload</span
                                             ></span
                                           >
@@ -543,7 +543,7 @@
                                                                     class="btn-nav"
                                                                   >
                                                                     <span
-                                                                      class="_3hmsj"
+                                                                      class="box-border"
                                                                       ><svg
                                                                         viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
@@ -680,7 +680,7 @@
                                                                     class="btn-nav"
                                                                   >
                                                                     <span
-                                                                      class="_3hmsj"
+                                                                      class="box-border"
                                                                       ><svg
                                                                         viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
@@ -817,7 +817,7 @@
                                                                     class="btn-nav"
                                                                   >
                                                                     <span
-                                                                      class="_3hmsj"
+                                                                      class="box-border"
                                                                       ><svg
                                                                         viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
@@ -954,7 +954,7 @@
                                                                     class="btn-nav"
                                                                   >
                                                                     <span
-                                                                      class="_3hmsj"
+                                                                      class="box-border"
                                                                       ><svg
                                                                         viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
@@ -1091,7 +1091,7 @@
                                                                     class="btn-nav"
                                                                   >
                                                                     <span
-                                                                      class="_3hmsj"
+                                                                      class="box-border"
                                                                       ><svg
                                                                         viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
