--- a/gift.html
+++ b/gift.html
@@ -126,7 +126,7 @@
                                   </button>
                                 </div>
                               </div>
-                              <div class="_3hmsj">
+                              <div class="box-border">
                                 <div class="_167wsvl">
                                   <button
                                     type="button"
@@ -135,7 +135,7 @@
                                     aria-label="Main navigation menu. 3 notifications."
                                     data-testid="cypress-headernav-profile"
                                   >
-                                    <div class="_3hmsj">
+                                    <div class="box-border">
                                       <svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
