--- a/invite-friends.html
+++ b/invite-friends.html
@@ -102,7 +102,7 @@
                         </button>
                       </div>
                     </div>
-                    <div class="_3hmsj">
+                    <div class="box-border">
                       <div class="_167wsvl">
                         <button
                           type="button"
@@ -111,7 +111,7 @@
                           aria-label="Main navigation menu. 2 notifications."
                           data-testid="cypress-headernav-profile"
                         >
-                          <div class="_3hmsj">
+                          <div class="box-border">
                             <svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
