--- a/login-security.html
+++ b/login-security.html
@@ -1192,7 +1192,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_167wsvl">
                                     <button
                                       type="button"
@@ -1201,7 +1201,7 @@
                                       aria-label="Main navigation menu. 3 notifications."
                                       data-testid="cypress-headernav-profile"
                                     >
-                                      <div class="_3hmsj">
+                                      <div class="box-border">
                                         <svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
