--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -516,7 +516,7 @@
                                   d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"
                                 ></path>
                               </g></svg></span></span
-                        ><span class="_3hmsj"
+                        ><span class="box-border"
                           >Back to Resolution Center</span
                         ></span
                       ></a
