--- a/submission/participation.html
+++ b/submission/participation.html
@@ -89,7 +89,7 @@
                         </h2>
                         <div class="_e296pg">
                           <div>
-                            <div class="_3hmsj" id="Your idea-section-row">
+                            <div class="box-border" id="Your idea-section-row">
                               <div
                                 class="_qx2ic59"
                                 role="button"
@@ -232,7 +232,7 @@
                           </div>
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="What we're looking for-section-row"
                             >
                               <div
@@ -440,7 +440,7 @@
                           </div>
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="Experience page-section-row"
                             >
                               <div
@@ -681,7 +681,7 @@
                             </div>
                           </div>
                           <div>
-                            <div class="_3hmsj" id="Settings-section-row">
+                            <div class="box-border" id="Settings-section-row">
                               <div
                                 class="_qx2ic59"
                                 role="button"
@@ -923,7 +923,7 @@
                           </div>
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="Your submission-section-row"
                             >
                               <div
@@ -1016,7 +1016,7 @@
                           type="button"
                           class="_m1y9te"
                         >
-                          <span class="_3hmsj"
+                          <span class="box-border"
                             ><svg
                               viewBox="0 0 16 16"
                               role="img"
@@ -1046,7 +1046,7 @@
                           <div class="_1j6mvlwv">
                             <div class="_foa5ri">
                               <section>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_mf1jwf">
                                     <h1
                                       id="FMP-target"
