--- a/submission/review.html
+++ b/submission/review.html
@@ -85,7 +85,7 @@
                         </h2>
                         <div class="_e296pg">
                           <div>
-                            <div class="_3hmsj" id="Your idea-section-row">
+                            <div class="box-border" id="Your idea-section-row">
                               <div
                                 class="_qx2ic59"
                                 role="button"
@@ -228,7 +228,7 @@
                           </div>
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="What we're looking for-section-row"
                             >
                               <div
@@ -437,7 +437,7 @@
                           </div>
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="Experience page-section-row"
                             >
                               <div
@@ -678,7 +678,7 @@
                             </div>
                           </div>
                           <div>
-                            <div class="_3hmsj" id="Settings-section-row">
+                            <div class="box-border" id="Settings-section-row">
                               <div
                                 class="_qx2ic59"
                                 role="button"
@@ -920,7 +920,7 @@
                           </div>
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="Your submission-section-row"
                             >
                               <div
@@ -1012,7 +1012,7 @@
                           type="button"
                           class="_m1y9te"
                         >
-                          <span class="_3hmsj"
+                          <span class="box-border"
                             ><svg
                               viewBox="0 0 16 16"
                               role="img"
@@ -1045,7 +1045,7 @@
                           <div class="_1j6mvlwv">
                             <div class="_foa5ri">
                               <section>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_mf1jwf">
                                     <h1
                                       id="FMP-target"
