--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -86,7 +86,7 @@
                         </h2>
                         <div class="_e296pg">
                           <div>
-                            <div class="_3hmsj" id="Your idea-section-row">
+                            <div class="box-border" id="Your idea-section-row">
                               <div
                                 class="_qx2ic59"
                                 role="button"
@@ -229,7 +229,7 @@
                           </div>
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="What we're looking for-section-row"
                             >
                               <div
@@ -438,7 +438,7 @@
                           </div>
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="Experience page-section-row"
                             >
                               <div
@@ -678,7 +678,7 @@
                             </div>
                           </div>
                           <div>
-                            <div class="_3hmsj" id="Settings-section-row">
+                            <div class="box-border" id="Settings-section-row">
                               <div
                                 class="_qx2ic59"
                                 role="button"
@@ -920,7 +920,7 @@
                           </div>
                           <div>
                             <div
-                              class="_3hmsj"
+                              class="box-border"
                               id="Your submission-section-row"
                             >
                               <div
@@ -1013,7 +1013,7 @@
                           type="button"
                           class="_m1y9te"
                         >
-                          <span class="_3hmsj"
+                          <span class="box-border"
                             ><svg
                               viewBox="0 0 16 16"
                               role="img"
@@ -1046,7 +1046,7 @@
                           <div class="_1j6mvlwv">
                             <div class="_foa5ri">
                               <section>
-                                <div class="_3hmsj">
+                                <div class="box-border">
                                   <div class="_mf1jwf">
                                     <h1
                                       id="FMP-target"
@@ -1128,7 +1128,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                       ><div class="_zhftk97">
                                         <div class="_11hx67x">Duration</div>
                                       </div>
-                                      <div class="_3hmsj">
+                                      <div class="box-border">
                                         <select
                                           name="experience_duration"
                                           aria-describedby="experience_duration-InputField-help"
